[package]
name = "ots-viewer"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]

[[bin]]
name = "ots-viewer-server"
path = "src/main.rs"

[dependencies]
bitcoin = "0.8"
multipart = "0.11"
ots = "0.1"
rocket = "0.2"
rocket_codegen = "0.2"
serde = "0.9"
serde_derive = "0.9"

[dependencies.rocket_contrib]
version = "0.2"
default-features = false
features = ["handlebars_templates"]

