[package]
name = "ots-viewer"
version = "0.2.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]

[[bin]]
name = "ots-viewer-server"
path = "src/main.rs"

[dependencies]
bitcoin = "0.9"
rocket-multipart-form-data = "0.9"
rust-crypto = "0.2"
opentimestamps = "0.1"
rocket = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["handlebars_templates"]

[dependencies.serde]
version = "1"
features = [ "derive" ]

